Fix horizontal scrollbar

--- a/res/styles/less/stylesheet.less
+++ b/res/styles/less/stylesheet.less
@@ -371,7 +371,7 @@ footer {
 .section {
     max-width: 60em;
     margin: auto;
-    padding: 2em 0;
+    padding: 2em 1em;
 }
 
 ::selection {
